# hello-unit-testing

./: CMakeLists.txt  KConfig  README.md  conf.py  scoopfile.json
.github/workflows/: test.yml
components/a/: CMakeLists.txt
components/a/src/: a.c  a.h
components/a/test/: test_a.cc
components/b/src/: b.h
components/calc/: CMakeLists.txt
components/calc/doc/: index.rst
components/calc/src/: calc.c  calc.h
components/calc/test/: test_calc.c  test_calc.cc
test/default/: test__default.py
tools/toolchains/gcc/: toolchain.cmake
variants/default/: parts.cmake
